RESOLVED FIXED281652
REGRESSION(284010@main): White area around YouTube autocomplete popup
https://bugs.webkit.org/show_bug.cgi?id=281652
Summary REGRESSION(284010@main): White area around YouTube autocomplete popup
Tim Nguyen (:ntim)
Reported 2024-10-16 23:26:27 PDT
Attachments
Tim Nguyen (:ntim)
Comment 1 2024-10-16 23:37:21 PDT
EWS
Comment 2 2024-10-17 10:05:04 PDT
Committed 285343@main (53c5612fe347): <https://commits.webkit.org/285343@main> Reviewed commits have been landed. Closing PR #35351 and removing active labels.
EWS
Comment 3 2024-10-18 14:02:30 PDT
Committed 283286.323@safari-7620-branch (4e6f60af4fbb): <https://commits.webkit.org/283286.323@safari-7620-branch> Reviewed commits have been landed. Closing PR #2076 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.