REGRESSION(284010@main): White area around YouTube autocomplete popup https://bugs.webkit.org/show_bug.cgi?id=281652 rdar://137387751

Reviewed by Simon Fraser.

284010@main forced the CSS color-scheme of YouTube to dark when YouTube in dark mode, to ensure
the natively drawn scrollbars (triggered by `scrollbar-width: thin`) don't draw with a
light color scheme looking out of place.

Unfortunately, setting the CSS color-scheme to dark has the side-effect of adding a white background
to iframes with mismatching color-scheme. That is visible with the iframe that appears behind the
YouTube search autocomplete popup.

Fix the original issue in 284010@main by disabling `scrollbar-width: thin` on YouTube, so custom
drawn scrollbars styled using `::-webkit-scrollbar` pseudo-elements are used once again.

* Source/WebCore/css/CSSPrimitiveValueMappings.h:
(WebCore::TypeDeducingCSSValueMapper::TypeDeducingCSSValueMapper):
(WebCore::fromCSSValueDeducingType):
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsScrollbarWidthThinDisabledQuirk const):
(WebCore::Quirks::needsYouTubeDarkModeQuirk const): Deleted.
* Source/WebCore/page/Quirks.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertScrollbarWidth):

Canonical link: https://commits.webkit.org/285343@main